Fixed jumbotron title font size on mobile.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,8 +26,21 @@ article.main {
  * Index page
  */
 
-.jumbotron {
+@media screen and (min-width: 768px) {
+  .jumbotron {
     margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .jumbotron {
+    margin-top: 0;
+  }
+
+  .jumbotron h1,
+  .jumbotron .h1 {
+    font-size: 54px;
+  }
 }
 
 
